fix opacity flicker

--- a/michael/scss/style.scss
+++ b/michael/scss/style.scss
@@ -94,9 +94,6 @@ $sm-bp: 850px;
   &:hover {
     opacity: 1;
   }
-  img {
-    background-color: $white;
-  }
   
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
